--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node index.js"
   },
-  "dependencies": {
-    "openai": "^4.0.0"
+  "engines": {
+    "node": ">=18"
   }
 }
